--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
   .happy,
   .toyou {
     position: relative;
-    font-family: didot;
+    font-family: arial;
     text-align: center;
     backface-visibility: hidden;
     font-size: 30px;
@@ -242,7 +242,7 @@
   }
 
   p {
-    font-family: "Brush Script MT", cursive;
+    font-family: arial, cursive;
     color: #333;
   }
 
